--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="XwomRT6qpE4D1Bfr4Xq9ka0j8WcK1oUT7dtGi2kYgw8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness Club</title>
     <link rel="icon" href="Style/Assets/Air Balloon 1 (1).png">
