--- a/Calories.html
+++ b/Calories.html
@@ -16,6 +16,7 @@
         <a href="Nutrition.html">NUTRITION</a>
         <a href="Fitnes.html">FITNESS</a>
         <a href="Calories.html">CALORIES</a>
+       
       </div>
       <label class="hamburger">
         <input type="checkbox" />
@@ -29,10 +30,14 @@
       </label>
     </header>
     <main>
+      
       <div class="input">
-        <input type="text" required="" autocomplete="off" />
+        <input type="text" required="" autocomplete="off" id="input" placeholder="Activity"/>
       </div>
-      <button>Search</button>
+      <button><span></span>
+        <span></span>
+        <span></span>
+        <span></span>Search</button>
     </main>
     <div class="content-res">
       <div class="first card">
