--- a/Calories.html
+++ b/Calories.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fitness Club</title>
+    <title>NutriFitTracker</title>
     <link rel="icon" href="Style/Assets/Air Balloon 1 (1).png" />
     <link rel="stylesheet" href="Style/Stylings/calories.css" />
    
