Enter Button Functinality

--- a/Calories.html
+++ b/Calories.html
@@ -32,7 +32,7 @@
     <main>
       
       <div class="input">
-        <input type="text" required="" autocomplete="off" id="input" placeholder="Activity"/>
+        <input type="text" required="" autocomplete="off" id="input" placeholder="Activity"  autofocus/>
       </div>
       <button><span></span>
         <span></span>
