--- a/Nutrition.html
+++ b/Nutrition.html
@@ -33,7 +33,7 @@
       <div class="input-field">
        
         <div class="input" >
-          <input type="text" id="input" placeholder="Food">
+          <input type="text" id="input" required="" autocomplete="off" placeholder="Food" autofocus>
         </div>
         <button>
           <span></span>
