--- a/Fitnes.html
+++ b/Fitnes.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NutriFitTracker</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
     <link rel="icon" href="Style/Assets/Air Balloon 1 (1).png" />
     <link rel="stylesheet" href="Style/Stylings/fitness.css" />
   </head>
@@ -56,7 +60,7 @@
           </optgroup>
         </select>
 
-        <button>
+        <button class="button">
           <span></span>
           <span></span>
           <span></span>
@@ -102,7 +106,9 @@
         </ul>
       </div>
     </div>
-
+    <button id="scrollToTopBtn" title="Go to top"><span class="material-symbols-outlined">
+      expand_less
+      </span></button>
     <script src="JavaScript/fitness.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
   </body>
