--- a/Nutrition.html
+++ b/Nutrition.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NutriFitTracker</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
     <link rel="icon" href="Style/Assets/Air Balloon 1 (1).png" />
     <link rel="stylesheet" href="Style/Stylings/nutrition.css" />
   </head>
@@ -35,7 +39,7 @@
         <div class="input" >
           <input type="text" id="input" required="" autocomplete="off" placeholder="Food" autofocus>
         </div>
-        <button>
+        <button class="custom-button">
           <span></span>
           <span></span>
           <span></span>
@@ -70,6 +74,9 @@
         </ul>
       </div>
     </div>
+    <button id="scrollToTopBtn" title="Go to top"><span class="material-symbols-outlined">
+      expand_less
+      </span></button>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <script src="JavaScript/nutrition.js"></script>
   </body>
