--- a/Calories.html
+++ b/Calories.html
@@ -19,6 +19,7 @@
         <a href="Nutrition.html">NUTRITION</a>
         <a href="Fitnes.html">FITNESS</a>
         <a href="Calories.html">CALORIES</a>
+        <a href="StopWatch.html">STOPWATCH</a>
        
       </div>
       <label class="hamburger">
