--- a/Nutrition.html
+++ b/Nutrition.html
@@ -73,9 +73,13 @@
         </ul>
       </div>
     </div>
-    <button id="scrollToTopBtn" title="Go to top"><span class="material-symbols-outlined">
-      expand_less
-      </span></button>
+    <button id="scrollToTopBtn" title="Go to top"><script src="https://cdn.lordicon.com/lordicon.js"></script>
+      <lord-icon
+          src="https://cdn.lordicon.com/dwoxxgps.json"
+          trigger="hover"
+          state="hover-arrow-up-2"
+          colors="primary:#ffffff"
+          style="width:4rem;height:4rem"></button>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <script src="JavaScript/nutrition.js"></script>
   </body>
